--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "globals": "^15.15.0"
+    "globals": "^15.15.0",
+    "intelli-espower-loader": "^1.1.0",
+    "jest": "^29.7.0",
+    "mocha": "^11.1.0",
+    "power-assert": "^1.6.1"
   }
 }
